Init loadCSV improvements